css/global.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --white: #fcfbf8;
  --pink: #E3442E;
  --black: #212121;
  --darkgrey: #333333;
  --blackbackground: #171717;
  
  --spacing-xl: clamp(60px, 8vw, 120px);
  --spacing-lg: clamp(40px, 6vw, 80px);
  --spacing-md: clamp(20px, 4vw, 40px);
  --spacing-sm: clamp(10px, 2vw, 20px);
}

[hidden] {
  display: none !important;
}

html, body {
  font-size: 16px;
  padding-top: calc(12px + 1rem);
  background-color: var(--blackbackground);
  width: 100%;
  height: 100%;
  overflow-x: hidden;
  position: relative;
}

header {
  width: 100%;
  max-width: 1224px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 5px 0px 0px;
  background-color: var(--blackbackground);

  @media(width <=40em) {
    
    padding: 5px 5px 0px;
  }
}

.header-wrapper {
  position: fixed;
  top: 0;
  z-index: 1000;
  width: 100%;
  background-color: var(--blackbackground);
  display: flex;
  flex-direction: column;
  align-items: center;
}


.line-top {
  position: relative;
  width: 0;
  animation: drawLine 1.5s forwards;
  animation-delay: 0.5s;
  margin-left: -3px;
  
  @media(width <=40em){
    
    margin-left: 3px;
  }


}

.the-line {
    margin-bottom: 1rem;
  width: 100%;
  max-width: 1224px; /* Match carousel max-width */
  position: relative;
  @media(width <=40em) {
    
    margin-bottom: 0px;
  }
}

.header-container {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  position: relative;
}

/* LOGO */

.logo .logo-img {
  display: flex;
  justify-content: flex-start;
  height: 12px;
}

.desktop-logo {
  display: none;
 
}

/* Show phone logo by default */
.phone-logo {
  display: inline;
  height: 2rem;
  width: auto;
}

/* For screens larger than 40em (640px - tablets and desktop) */
@media (min-width: 40em) {
  .desktop-logo {
    display: inline;
    justify-content: flex-start;
    height: 36px;
    width: auto;
  }
  .phone-logo {
    display: none;
    
  }
}

/* ANIMATION FOR LINE AND ARROW*/

.arrow-right {
 opacity: 0; 
 transition: opacity 1s ease-in-out 2s; 
 animation: drawArrow 1s forwards 2s; 
}

@keyframes drawLine {
 to {
   width: 100%; 
 }
}

@keyframes drawArrow {
 to {
   opacity: 1; 
 }
}

/* MENU ELEMENTER */

.menu-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: relative;
}

.burger-wrapper {
  cursor: pointer;
  position: relative;
  margin-right: 20px;
  z-index: 20;
}

.menu-open {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  left: 50px;
  width: 100%;
  align-items: center;
  padding: 20px 0;
  transform: translateY(-20px);
  transition: opacity 0.3s ease, transform 0.3s ease, visibility 0.3s ease;

  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}

/* SAFARI */

/* Safari-specific rule */
@supports (-webkit-backdrop-filter: blur(0)) {
  .menu-open {
    left: 150px; /* Safari-specific value */
  }
}

.menu-open.active {
  visibility: visible;
  opacity: 1;
  transform: translateY(0);
}

.nav-item {
  color: var(--white);
  display: flex;
  font-family: Merriweather Sans, sans-serif;
  font-size: 1rem; 
  font-weight: 200;
  padding: 10px 20px;
  text-decoration: none;
  white-space: nowrap;
  z-index: 10;
  opacity: 0;
  transform: translateY(20px);
  transition: opacity 0.3s ease, transform 0.3s ease;
}

.nav-item:hover {
  color: var(--pink);
}

.menu-open.active .nav-item {
  opacity: 1;
  transform: translateY(0);
}

.burger-icon {
  display: flex;
  align-items: center;
  justify-content: center;
}

.burger-icon svg {
  width: 33px;
  height: 27px;
}

/* BURGER ANIMATION */

.burger-line {
  transition: all 0.5s ease-in-out;
  transform-origin: center;
}

.burger-wrapper.active .line1 {
  transform: rotate(45deg) translate(4px, 12px);
}

.burger-wrapper.active .line2 {
  opacity: 0;
}

.burger-wrapper.active .line3 {
  transform: rotate(-45deg) translate(3px, -6px);
}



/* FOOTER */

.footer
{
  position: fixed;
  width: 100%;
   bottom: 0;
   background-color: var(--blackbackground) !important;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1000;
}

.footer-info {
   
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 15px;
  margin-top: 10px;
  margin-bottom: 10px;
  
   @media(width >=40em) {
     /* 640px - tablets */
    gap: 30px;
  }
  
  @media(width >=60em) {
    /* 960px - desktop */
    gap: 50px;
  }
}

.footer-item {
  color: var(--white);
  font-family: Merriweather Sans, sans-serif;
  text-decoration: none;
  font-size: 0.625rem;
  
    
   @media(width >=40em) {
     /* 640px - tablets */
    font-size: 0.7rem;
  }
  
  @media(width >=60em) {
    /* 960px - desktop */
    font-size: 0.8rem;
  }
}

.footer-item:hover {
  color: var(--pink);
  scale: 1.01;
  cursor: pointer;
}

.copy-message {
  display: none;
  opacity: 0;
  position: absolute;
  color: white;
  padding: 3px 10px;

  font-size: 0.7rem;
  transition: opacity 0.3s ease-in-out;
  pointer-events: none;
  transform: translateY(-10%);
  margin-left: 5px;
}

.copy-message.show {
  display: inline-block;
  opacity: 1;
}


/* ------------ MEDIA QUERIES ----------- */

/* ------- MOBILE - 768px ----- */
@media (width <= 40em) {
  
  body {
    overflow-x: hidden;
  }

  /* MOBILE NAV */
  
  .menu-open {
    position: fixed;
    top: 0;
    left: -100%;
    width: 40vw;
    height: 90vh;
    background-color: var(--blackbackground);
    flex-direction: column;
    padding: 30px 0px 0px 20px;
    transition: left 0.3s ease;
    z-index: 2;
    justify-content: space-evenly;
  }

  .menu-open.active {
    left: 0;
    visibility: visible;
    opacity: 1;
    transform: none;
    z-index: 2;
  }

  .nav-item {
    color: var(--white);
    font-size: 18px;
    padding: 15px 0;
    width: 100%;
    text-align: left;
    border-bottom: 1px solid rgba(250, 250, 250, 0.1);
  }
  
  .nav-item:hover {
    color: var(--pink);
  }


  /* Adjust burger menu position */
  .burger-wrapper {
    position: relative;
    top: auto;
    
    left: auto;
    z-index: 19;
    margin-left: 2px;
  }

  
  .arrow-left,
  .arrow-right {
    top: 50%;
    transform: translateY(-50%);
    background-color: rgba(0, 0, 0, 0.3);
    padding: 15px;
    border-radius: 50%;
  }
  
 
}

